<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_camera</name>
  <version>0.1.0</version>
  <description>Small ROS 2 camera publisher backed by OpenCV VideoCapture.</description>
  <maintainer email="t.fischer@imperial.ac.uk">Tobias Fischer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
