<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rt_gene_ros</name>
  <version>5.0.0</version>
  <description>ROS 2 nodes and launch files for RT-GENE gaze and blink estimation.</description>
  <maintainer email="t.fischer@imperial.ac.uk">Tobias Fischer</maintainer>
  <license>CC-BY-NC-SA-4.0</license>

  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>rt_gene_core</depend>
  <depend>rt_gene_interfaces</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
